[workspace]
resolver = "3"
members = ["packages/app/src-tauri", "packages/plugin"]

[workspace.package]
authors = ["wenxig"]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/delta-comic/delta-comic"
rust-version = "1.94.0"
version = "2.3.1"

[workspace.dependencies]
log = "0.4.29"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
sentry = { version = "0.46.2", default-features = false, features = [
  "backtrace",
  "contexts",
  "debug-images",
  "panic",
  "release-health",
  "reqwest",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin = "=2.5.4"
tauri-plugin-aptabase = { git = "https://github.com/delta-comic/tauri-plugin-aptabase-rustls", branch = "main" }
tauri-plugin-better-cors-fetch = { git = "https://github.com/wenxig/tauri-plugin-better-cors-fetch", branch = "main", features = [
  "multipart",
  "blocking",
  "native-tls-vendored",
] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
tauri-plugin-m3 = "0.3.1"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-plugin = { path = "packages/plugin" }
tauri-plugin-sentry = { git = "https://github.com/delta-comic/sentry-tauri-new", branch = "master" }
tauri-plugin-shell = "2"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = [
  "sqlite",
] }
tauri-runtime-wry = "2.10.1"
tokio = "1.50.0"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2"] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
incremental = true