[workspace]
resolver = "3"
members = ["packages/app/src-tauri", "packages/db", "packages/plugin", "packages/utils"]

[workspace.package]
authors = ["wenxig"]
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/delta-comic/delta-comic"
rust-version = "1.94.0"
version = "2.3.0"

[workspace.dependencies]
log = "0.4.32"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-plugin = "2.6.2"
tauri-plugin-aptabase = { git = "https://github.com/delta-comic/tauri-plugin-aptabase-rustls", branch = "main" }
tauri-plugin-better-cors-fetch = { version = "1.8.0", features = [
  "multipart",
  "blocking",
  "native-tls-vendored",
] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-db = { path = "packages/db" }
tauri-plugin-fs = "2.5.1"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
tauri-plugin-m3 = "0.3.1"
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-plugin = { path = "packages/plugin" }
tauri-plugin-shell = "2"
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = [
  "sqlite",
] }
tauri-plugin-utils = { path = "packages/utils" }
tauri-runtime-wry = "2.11.2"
tokio = "1.52.3"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
incremental = true